--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <div class="container">
       <div class="card">
-        <img src="assets/images/illustration-article.svg" class="preview">
+        <img src="assets/images/illustration-article.svg" class="preview" alt="design">
         <p><span>Learning</span></p>
         <h1 class="sub-text">Published 21 Dec 2023</h1>
         <div>
