--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
           <p class="summary">These languages are the backbone of every website, defining structure, content, and presentation.</p>
           <div class="lower">
-            <img src="assets/images/image-avatar.webp" class="profile">
+            <img src="assets/images/image-avatar.webp" class="profile" alt="profile">
             <h1 class="name">Greg Hooper</h1>
           </div>
         </div>
